Update KafkaRaftClientTest so that we don't need private access to jdk.internal.util.random